--- a/Src/CarSales.UI/Pages/Index.razor
+++ b/Src/CarSales.UI/Pages/Index.razor
@@ -5,3 +5,7 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+@* Навигация сверху *@
+@* Лого/Название - Каталог - О Нас *@
+@* Правый блок - последние добавленные автомобили *@
